Update 'n24pmxbvp-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:d0b2b1a84f7dbe4b1eb1cfbb0a6f557d6b15c37b@sha256:ab8bef713f8c41245ee1e98eeb19f9829298a78dd16e0721b49a204a996c2d3d

--- a/components/n24pmxbvp-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/n24pmxbvp-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: n24pmxbvp-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:d0b2b1a84f7dbe4b1eb1cfbb0a6f557d6b15c37b@sha256:ab8bef713f8c41245ee1e98eeb19f9829298a78dd16e0721b49a204a996c2d3d
+          name: container-image
